@@ -44,6 +44,7 @@ tasks.withType<ShadowJar> {
 tasks.withType<JavaCompile> {
     options.encoding = Charsets.UTF_8.name()
     options.release.set(17)
+    options.compilerArgs.add("--enable-preview")
 }
 
 tasks.withType<ProcessResources> {
